--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   ],
   "main": "./src/index.js",
   "scripts": {
+    "precommit": "lint-staged",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {},
