--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "scripts": {
     "precommit": "lint-staged",
     "eslint:src": "cross-env NODE_ENV=test gulp eslint:src",
+    "quick:eslint": "cross-env NODE_ENV=test gulp quick:eslint",
     "quick:test": "cross-env NODE_ENV=test nodemon ./quick.test.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -53,6 +54,7 @@
   "preferGlobal": true,
   "analyze": true,
   "dependencies": {
+    "ansi-colors": "^3.2.4",
     "bcryptjs": "^2.4.3",
     "chalk": "^2.4.2",
     "cross-env": "^5.2.0",
