--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-eslint": "^5.0.0",
+    "gulp-if": "^2.0.2",
     "gulp-mocha": "^6.0.0",
     "husky": "^2.3.0",
     "lint-staged": "^8.1.7",
