--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-react": "^7.13.0",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
+    "gulp-cached": "^1.1.1",
     "gulp-eslint": "^5.0.0",
     "gulp-if": "^2.0.2",
     "gulp-mocha": "^6.0.0",
