build: add yargs module

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "lint-staged": "^8.1.7",
     "mocha": "^6.1.4",
     "nodemon": "^1.19.0",
-    "prettier": "^1.17.1"
+    "prettier": "^1.17.1",
+    "yargs": "^13.2.4"
   }
 }
